logs/rpncalc.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/rpncalc'...
Compiling './lib/python3.5/site-packages/rpncalc/extra.py'...
***   File "./lib/python3.5/site-packages/rpncalc/extra.py", line 234
    os.makedirs(dname, 0755)
                          ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/rpncalc/ratfun.py'...
***   File "./lib/python3.5/site-packages/rpncalc/ratfun.py", line 233
    if n == 0: raise ZeroDivisionError, 'polynomial division by zero'
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rpncalc/rpncalc.py'...
***   File "./lib/python3.5/site-packages/rpncalc/rpncalc.py", line 153
    print _defaultMessage
                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/rpncalc-2.7.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
